--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,13 +1,13 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bucket-list Home Page</title>
-</head>
-<body>
-<h1>Welcome to Bucket-List !</h1>
-</body>
-</html>
+{% extends 'base.html.twig' %}
+
+{% block title %} Bucket-List | Accueil
+{% endblock %}
+
+{% block body %}
+    <ul>
+        Liste des choses à faire dans la vie !
+        <li>
+
+        </li>
+    </ul>
+{% endblock %}
