Création de la BDD, de l'entity Wish, utilisation du findAll() pour l'affichage de la liste et du findBy() pour l'affichage des détails d'un souhait (clic sur le titre)

--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -1,10 +1,34 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-{{ parent() }} | Wish
+    {{ parent() }} | Wish
 {% endblock %}
 
 {% block body %}
-<p>Détail du souhait sélectionné :</p>
+    <p>Détails du souhait sélectionné :</p>
+    <section class="details">
+        <div>
+            Titre : {{ wish.title }}
+        </div>
+        <div>
+            Description : {{ wish.description }}
+        </div>
+        <div>
+            Auteur : {{ wish.author }}
+        </div>
+        <div>
+            Crée le {{ wish.dateCreated | date('d/m/y H:i') }}
+        </div>
+    </section>
 {% endblock %}
 
+{% block style %}
+    <style>
+        .details > div {
+            background-color: burlywood;
+            margin: 20px;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
+{% endblock %}
