--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% include '/header/header.html.twig' %}
     </header>
     <main>
+        {% block style %}{% endblock %}
         {% block body %}{% endblock %}
     </main>
     <footer>
