--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -1,10 +1,32 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-  <p> Liste de vos souhaits </p>
+  <p> Liste de vos souhaits :</p>
+    {% for wish in wishes %}
+    <ul class="list">
+        <a href="{{ path('wish_detail', {'id':wish.id}) }}" class="wishes">
+            <li>{{ wish.title }}</li>
+        </a>
+    </ul>
+    {% endfor %}
 {% endblock %}
 
 {% block title %}
     Wish List
+{% endblock %}
+
+{% block style %}
+    <style>
+        .list{
+            list-style: circle;
+        }
+        .wishes{
+            text-decoration: none;
+            color: black;
+        }
+        .wishes:hover{
+            font-weight: bold;
+        }
+    </style>
 {% endblock %}
 
