--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,13 @@
         {% include '/header/header.html.twig' %}
     </header>
     <main>
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="flash flash-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
         {% block style %}{% endblock %}
         {% block body %}{% endblock %}
     </main>
