--- a/templates/header/nav.html.twig
+++ b/templates/header/nav.html.twig
@@ -1,17 +1,16 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav" >
-                <li class="nav-item">
-                    <a class="a" href="{{ path('main_home') }}">Accueil</a>
-                </li>
-                <li class="nav-item">
-                    <a class="a" href="{{ path('wish_list') }}">Liste</a>
-                </li>
-                <li class="nav-item">
-                    <a class="a" href="{{ path('main_aboutUs') }}">About Us</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+<nav>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="a" href="{{ path('main_home') }}">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="a" href="{{ path('wish_list') }}">List</a>
+        </li>
+        <li class="nav-item">
+            <a class="a" href="{{ path('wish_add') }}">New</a>
+        </li>
+        <li class="nav-item">
+            <a class="a" href="{{ path('main_aboutUs') }}">About us</a>
+        </li>
+    </ul>
 </nav>
