--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <p>Détails du souhait sélectionné :</p>
+    <p>Details :</p>
     <section class="details">
         <div>
             Titre : {{ wish.title }}
