--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,3 +106,15 @@ main {
     justify-content: center;
     margin: 20px;
 }
+
+.category_section{
+    border-style: double;
+    border-color: slategrey;
+    margin-right: 10px;
+    padding: 10px;
+}
+
+.wish_list{
+    display: flex;
+    justify-content: center;
+}
