--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -17,6 +17,9 @@
             Auteur : {{ wish.author }}
         </div>
         <div>
+            Catégorie : {{ wish.category.name}}
+        </div>
+        <div>
             Crée le {{ wish.dateCreated | date('d/m/y H:i') }}
         </div>
     </section>
@@ -29,6 +32,17 @@
             margin: 20px;
             padding: 20px;
             text-align: center;
+        }
+        .flash-success {
+            background-color: mediumseagreen;
+        }
+
+        .flash {
+            padding: 20px;
+            font-weight: bold;
+            font-size: 1rem;
+            margin: 1rem 0;
+            color: #132135;
         }
     </style>
 {% endblock %}
