--- a/templates/header/nav.html.twig
+++ b/templates/header/nav.html.twig
@@ -1,16 +1,36 @@
 <nav>
     <ul class="navbar-nav">
+        {% if app.user %}
+            <li class="nav-item">
+                Hello {{ app.user.pseudo }}
+            </li>
+        {% endif %}
         <li class="nav-item">
             <a class="a" href="{{ path('main_home') }}">Home</a>
         </li>
         <li class="nav-item">
             <a class="a" href="{{ path('wish_list') }}">List</a>
         </li>
+        {% if app.user %}
         <li class="nav-item">
             <a class="a" href="{{ path('wish_add') }}">New</a>
         </li>
+        {% endif %}
         <li class="nav-item">
             <a class="a" href="{{ path('main_aboutUs') }}">About us</a>
         </li>
+        {% if app.user %}
+            <li class="nav-item">
+                <a class="a" href="{{ path('app_logout') }}">Logout</a>
+            </li>
+        {% else %}
+            <li class="nav-item">
+                <a class="a" href="{{ path('app_login') }}">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="a" href="{{ path('app_register') }}">Register</a>
+            </li>
+        {% endif %}
+
     </ul>
 </nav>
